--- a/Code/node/_Var-styles.scss
+++ b/Code/node/_Var-styles.scss
@@ -21,6 +21,7 @@
     --Amarillo-02: #f19f24;
     --verde-01: #00A14A;
     --rojo-01: #C02116;
+    --rojo-02: #c01649;
     --Glass: rgba(255, 255, 255, 0.3);
 }
 
