--- a/Code/node/_footer-styles.scss
+++ b/Code/node/_footer-styles.scss
@@ -38,6 +38,7 @@
     }
     .footer-copy{
         color: var(--Blanco);
+        grid-area: copy;
 
         p{
             font-size: 18px;
@@ -45,6 +46,7 @@
     }
 
     .footer-icons{
+        grid-area: icons;
         width: 190px;
         justify-self: right;
         display: flex;
