--- a/Code/node/_mainpage.scss
+++ b/Code/node/_mainpage.scss
@@ -179,6 +179,7 @@
 }
 
 .section-02>.section-toppart>.section-content{
+    grid-area: frases;
     align-self: center;
 }
 
@@ -389,7 +390,7 @@
                 display: flex;
 
                 .articles-img{
-                    
+                    grid-area: img;
                     img{
                     
                     margin-top: 8%;    width: 40px;
