--- a/Code/styles.css
+++ b/Code/styles.css
@@ -23,6 +23,7 @@
   --Amarillo-02: #f19f24;
   --verde-01: #00A14A;
   --rojo-01: #C02116;
+  --rojo-02: #c01649;
   --Glass: rgba(255, 255, 255, 0.3);
 }
 
@@ -49,7 +50,7 @@ button {
 
 /*============ HEADER ==============*/
 .header-center {
-  margin: 3% 0 13% 15%;
+  margin: 7% 0 3% 15%;
 }
 
 .header-center > h2 {
@@ -63,8 +64,7 @@ button {
 }
 
 .header-nav {
-  padding: 3% 6%;
-  background-color: rgba(0, 0, 0, 0.219);
+  padding: 8% 6%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -608,29 +608,6 @@ button {
 }
 
 /*============ ALL NAVS & BG header ============*/
-/*======= HEADER BG =======*/
-.header-main {
-  background: url("../Imgs/nasa-gYwfpVI2JzM-unsplash.jpg");
-  height: 100%;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: 100%;
-  color: var(--Blanco);
-  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.253);
-}
-
-.header-hardware {
-  background: url("../Imgs/sergey-zolkin-_UeY8aTI6d0-unsplash.jpg");
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: 120%;
-  color: var(--Blanco);
-  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.253);
-  height: 100vh;
-  -webkit-box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.658);
-          box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.658);
-}
-
 /*==== SPECIFIC ASPECTS ====*/
 .header-top {
   padding-top: 2%;
@@ -700,6 +677,70 @@ button {
 #menu-icon {
   width: 50px;
   height: 50px;
+}
+
+/*======= HEADER BG =======*/
+.header-main {
+  background: url("../Imgs/nasa-gYwfpVI2JzM-unsplash.jpg");
+  height: 100%;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: 100%;
+  color: var(--Blanco);
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.253);
+}
+
+.header-hardware {
+  background: url("../Imgs/anas-alshanti-feXpdV001o4-unsplash.jpg");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: 100%;
+  color: var(--Blanco);
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.253);
+  height: 100vh;
+  -webkit-box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.658);
+          box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.658);
+  background-attachment: scroll;
+}
+
+.header-software {
+  background: url("../Imgs/windows-KXIWqtmvfxg-unsplash.jpg");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: 100%;
+  color: var(--Blanco);
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.253);
+  height: 100vh;
+  -webkit-box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.658);
+          box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.658);
+  background-attachment: scroll;
+}
+
+.header-conceptos {
+  background: url("../Imgs/ayeisa-vargas-wkSnjjRJ54I-unsplash.jpg");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: 100%;
+  color: var(--Blanco);
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.253);
+  height: 100vh;
+  -webkit-box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.658);
+          box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.658);
+  background-position: 25% 50%;
+}
+
+.header-articulos {
+  background: url("../Imgs/vincentiu-solomon-ln5drpv_ImI-unsplash.jpg");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: 100%;
+  color: var(--Blanco);
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.253);
+  height: 100vh;
+  -webkit-box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.658);
+          box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.658);
+  background-position: 25% 70%;
+  background-attachment: scroll;
 }
 
 /* ====================  FULL OF MQ =================== */
@@ -890,6 +931,4 @@ h4 {
 .footer-box .footer .footer-icons a img {
   width: 100%;
 }
-
-/**/
 /*# sourceMappingURL=styles.css.map */
