Se adelantó gran parte de la creación de blogs, falta terminar el blog, ajustar los estilos y hacer que el index tenga la propiedad sticky

--- a/Code/node/_nav-menu.scss
+++ b/Code/node/_nav-menu.scss
@@ -107,3 +107,8 @@
     background-position: 25% 70%;
     background-attachment: scroll;
 }
+.header-blog-Páginas_Web{
+    @include header-lobbys("../Imgs/vincentiu-solomon-ln5drpv_ImI-unsplash.jpg");
+    background-position: 25% 70%;
+    background-attachment: scroll;
+}
