Se termino la primera página blog, además de agregar la seccion de contacto apenas iniciada

--- a/Code/lobby-styles.css
+++ b/Code/lobby-styles.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /*== ROOT ==*/
 /*==================== ESTILOS GENERALES ====================*/
 * {
@@ -266,7 +267,7 @@ h4 {
 }
 
 .header-conceptos {
-  background: url("../Imgs/ayeisa-vargas-wkSnjjRJ54I-unsplash.jpg");
+  background: url("../Imgs/gabriel-voltz-16fUCKyba8g-unsplash.jpg");
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: 100%;
@@ -275,7 +276,7 @@ h4 {
   height: 100vh;
   -webkit-box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.658);
           box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.658);
-  background-position: 25% 50%;
+  background-position: 25% 30%;
 }
 
 .header-articulos {
@@ -289,6 +290,20 @@ h4 {
   -webkit-box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.658);
           box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.658);
   background-position: 25% 70%;
+  background-attachment: scroll;
+}
+
+.header-blog-Páginas_Web {
+  background: url("../Imgs/stillness-inmotion-Gq3i2dnLGik-unsplash.jpg");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: 100%;
+  color: var(--Blanco);
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.253);
+  height: 100vh;
+  -webkit-box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.658);
+          box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.658);
+  background-position: 25% 20%;
   background-attachment: scroll;
 }
 
@@ -538,11 +553,11 @@ h4 {
 }
 
 .CLobby {
-  background: #2d5e72;
+  background: #3d280c;
 }
 
 .CSpace {
-  background-color: var(--Azul-01);
+  background-color: var(--Amarillo-01);
 }
 
 .CSpace p {
@@ -550,7 +565,7 @@ h4 {
 }
 
 .ALobby {
-  background: #020113;
+  background: #00000e;
 }
 
 .ASpace {
@@ -651,5 +666,109 @@ h4 {
 
 .footer-box .footer .footer-icons a img {
   width: 100%;
+}
+
+/*====== FORMULARIO =====*/
+.contact-form {
+  --form-ok-color: #4caf50;
+  --form-error-color: #f44336;
+  margin-left: auto;
+  margin-right: auto;
+  width: 80%;
+}
+
+.contact-form > * {
+  padding: 0.5rem;
+  margin: 1rem auto;
+  display: block;
+  width: 100%;
+}
+
+.contact-form textarea {
+  resize: none;
+}
+
+.contact-form legend,
+.contact-form-response {
+  font-size: 1.5rem;
+  font-weight: bold;
+  text-align: center;
+}
+
+.contact-form input,
+.contact-form textarea {
+  font-size: 1rem;
+  font-family: sans-serif;
+}
+
+.contact-form input[type="submit"] {
+  width: 50%;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.contact-form *::-webkit-input-placeholder {
+  color: #000;
+}
+
+.contact-form *:-ms-input-placeholder {
+  color: #000;
+}
+
+.contact-form *::-ms-input-placeholder {
+  color: #000;
+}
+
+.contact-form *::placeholder {
+  color: #000;
+}
+
+.contact-form [required]:valid {
+  border: thin solid var(--form-ok-color);
+}
+
+.contact-form [required]:invalid {
+  border: thin solid var(--form-error-color);
+}
+
+.contact-form-error {
+  margin-top: -1rem;
+  font-size: 80%;
+  background-color: var(--form-error-color);
+  color: #fff;
+  -webkit-transition: all 800ms ease;
+  transition: all 800ms ease;
+}
+
+.contact-form-error.is-active {
+  display: block;
+  -webkit-animation: show-message 1s 1 normal 0s ease-out both;
+          animation: show-message 1s 1 normal 0s ease-out both;
+}
+
+.none {
+  display: none;
+}
+
+@-webkit-keyframes show-message {
+  0% {
+    visibility: hidden;
+    opacity: 0;
+  }
+  100% {
+    visibility: visible;
+    opacity: 1;
+  }
+}
+
+@keyframes show-message {
+  0% {
+    visibility: hidden;
+    opacity: 0;
+  }
+  100% {
+    visibility: visible;
+    opacity: 1;
+  }
 }
 /*# sourceMappingURL=lobby-styles.css.map */
