--- a/Code/node/_lobby-styles-main.scss
+++ b/Code/node/_lobby-styles-main.scss
@@ -245,11 +245,11 @@
 }
 
 .CLobby{
-    background: rgb(45, 94, 114);
+    background: rgb(61, 40, 12);
 }
  
 .CSpace{
-    background-color: var(--Azul-01);
+    background-color: var(--Amarillo-01);
 
     p{
         color: var(--Blanco);
@@ -257,7 +257,7 @@
 }
 
 .ALobby{
-    background: #020113;
+    background: #00000e;
 }
  
 .ASpace{
