--- a/blogs/blogs-styles.scss
+++ b/blogs/blogs-styles.scss
@@ -1,40 +1,145 @@
 @import '../Code/node/Var-styles','../Code/node/nav-menu','main-blog-styles','../Code/node/mediaQueries', '../Code/node/footer-styles';
 
-    article{
-        background: #000;
-    }
-
-    p, h4, h2, h5 {
-
-        color: #fff;
-    }
-
     a{
         text-decoration: none;
     }
 
     .articulo{
-
-        width: 80%;
+       
+        width: 85%;
         margin: auto;
+        padding-top: 5%;
         display: grid;
-        grid-template-columns: 30% 70%;
+        grid-template-columns: 25% 75%;
         grid-template-areas: "index content";
     }
 
     .index{
+        width: 100%;
+        height: 100%;
         grid-area: index;
-        position: sticky;
-        top: 0;
+        display: flex;
+        flex-direction: column;
         
-        div{
-            ul{
-                list-style: none;
+        
+        .index-content{
+            padding-top: 10%;
+            position: sticky;
+            top: 0;
+            div{
+                ul{
+                    list-style: none;
+                }
+            }
+        }
+
+        .index-butt{
+            align-self: flex-end;
+            display: flex;
+            gap: 5%;
+            margin-bottom: 5%;
+            a{
+                width: 50px;
+                img{
+                    width: 100%;
+                }
             }
         }
 
     }
 
     .content{
+        margin-left: 3%;
         grid-area: content;
+
+        .center-inf{
+            margin: auto;
+            width: 50%;           
+        }
+        
+        img{
+            display: flex;
+            justify-content: center;
+            
+            margin: auto;
+            max-height: 450px;   
+            }
+       
     }
+
+
+    article{
+
+        h4{
+            font-size: 50px;
+            text-align: center;
+        }
+        h5{
+            font-size: 20px;
+        }
+        p,b,i,a{
+            font-size: 22px;
+        }
+        background: #fff;
+        h4{
+            color: var(--Amarillo-02);
+        }
+    
+        h5{
+            color: var(--Amarillo-02);
+        }
+    
+        p,h2{
+            color: #000;
+            b{
+                color: var(--Azul-02);
+            }
+        }
+        a{
+            color: var(--rojo-01);
+            font-weight: 600;
+        }
+        h2{
+            font-weight: 600;
+        }
+
+    }
+
+    .masInfo{
+        
+        font-size: 35px;
+        font-style: italic;
+    }
+    .blog-link{
+        width: 70%;
+        margin: auto;
+    }
+   
+    .masInfo-space{
+        padding-bottom: 10%;
+        ul{
+            margin-bottom: 5%; 
+        }
+    }
+
+/*==========  NIGHT MODIFICATION ==========*/
+
+    .night{
+        background: #000;
+        h4{
+            color: var(--Amarillo-01);
+        }
+    
+        h5{
+            color: var(--Amarillo-01);
+        }
+    
+        p,h2{
+            color: #fff;
+            b{
+                color: var(--Azul-02);
+            }
+        } 
+    }
+
+     
