--- a/Code/lobby-styles.css
+++ b/Code/lobby-styles.css
@@ -13,6 +13,10 @@
   scroll-behavior: smooth;
 }
 
+*::first-letter {
+  text-transform: uppercase;
+}
+
 :root {
   --Negro: #000;
   --Blanco: #fff;
@@ -25,6 +29,8 @@
   --verde-01: #00A14A;
   --rojo-01: #C02116;
   --rojo-02: #c01649;
+  --cafe-01: #3d280c;
+  --cafe-02: #140d04;
   --Glass: rgba(255, 255, 255, 0.3);
 }
 
@@ -472,8 +478,8 @@ h4 {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  width: 360px;
-  height: auto;
+  max-width: 360px;
+  height: 100%;
   border-radius: 30px;
   -webkit-box-align: center;
       -ms-flex-align: center;
@@ -507,7 +513,7 @@ h4 {
 
 .lobby-content .lobby-grid .grid-card .blank_space p {
   margin: auto;
-  width: 70%;
+  width: 80%;
   text-align: center;
   font-size: 23px;
   font-weight: 500;
@@ -519,12 +525,17 @@ h4 {
   position: relative;
   z-index: 500;
   padding-bottom: 5%;
+  height: 100%;
 }
 
 .lobby-content .lobby-grid .grid-card .content-space p {
   width: 85%;
   margin: auto;
   padding: 5% 0;
+}
+
+.lobby-content .lobby-grid .grid-card .content-space p::first-letter {
+  text-transform: uppercase;
 }
 
 /*======================== BG =======================*/
@@ -553,7 +564,7 @@ h4 {
 }
 
 .CLobby {
-  background: #3d280c;
+  background: var(--cafe-01);
 }
 
 .CSpace {
@@ -578,13 +589,94 @@ h4 {
 
 /*================== BG-CARDS EDITS ==================*/
 /*--------------------- HARDWARE ----------------------*/
-.Hrd-card-01 {
+#Srd-card-01 {
   width: 100%;
   height: 270px;
   background: url("../Imgs/katie-barrett-aLIJlPrrjRM-unsplash.jpg");
   background-repeat: no-repeat;
   background-size: 100%;
+  background-color: #000;
   background-position: 25% 70%;
+}
+
+#Srd-card-02 {
+  width: 100%;
+  height: 270px;
+  background: url("https://images.unsplash.com/photo-1611532736579-6b16e2b50449?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1126&q=80");
+  background-repeat: no-repeat;
+  background-size: 100%;
+  background-color: #000;
+  background-position: 25% 50%;
+}
+
+#Srd-card-03 {
+  width: 100%;
+  height: 270px;
+  background: url("https://images.unsplash.com/photo-1574717025058-2f8737d2e2b7?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80");
+  background-repeat: no-repeat;
+  background-size: 100%;
+  background-color: #000;
+  background-position: 25% 35%;
+}
+
+#Hrd-card-01 {
+  width: 100%;
+  height: 270px;
+  background: url("https://images.unsplash.com/photo-1591799264318-7e6ef8ddb7ea?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1074&q=80");
+  background-repeat: no-repeat;
+  background-size: 100%;
+  background-color: #000;
+  background-position: 25% 35%;
+}
+
+#Hrd-card-02 {
+  width: 100%;
+  height: 270px;
+  background: url("https://images.unsplash.com/photo-1542978709-19c95dc3bc7e?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1074&q=80");
+  background-repeat: no-repeat;
+  background-size: 100%;
+  background-color: #000;
+  background-position: 25% 35%;
+}
+
+#Hrd-card-03 {
+  width: 100%;
+  height: 270px;
+  background: url("https://images.unsplash.com/photo-1610415303067-67a841b36fd5?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=687&q=80");
+  background-repeat: no-repeat;
+  background-size: 100%;
+  background-color: #000;
+  background-position: 25% 50%;
+}
+
+#Hrd-card-04 {
+  width: 100%;
+  height: 270px;
+  background: url("https://images.unsplash.com/photo-1602837385569-08ac19ec83af?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=626&q=80");
+  background-repeat: no-repeat;
+  background-size: 100%;
+  background-color: #000;
+  background-position: 25% 50%;
+}
+
+#Hrd-card-05 {
+  width: 100%;
+  height: 270px;
+  background: url("https://images.unsplash.com/photo-1593687395549-400945fed803?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=735&q=80");
+  background-repeat: no-repeat;
+  background-size: 100%;
+  background-color: #000;
+  background-position: 25% 50%;
+}
+
+#Hrd-card-06 {
+  width: 100%;
+  height: 270px;
+  background: url("https://cdn.computerhoy.com/sites/navi.axelspringer.es/public/styles/1200/public/media/image/2012/10/3975-montar-fuente-alimentacion.jpg?itok=kDeX7_ng");
+  background-repeat: no-repeat;
+  background-size: 100%;
+  background-color: #000;
+  background-position: 25% 50%;
 }
 
 /*=========== Footer ===========*/
@@ -668,6 +760,681 @@ h4 {
   width: 100%;
 }
 
+/*==================== ESTILOS GENERALES ====================*/
+* {
+  padding: 0;
+  margin: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  font-family: 'inter', sans-serif;
+  font-size: 16px;
+  -webkit-transition: all .5s;
+  transition: all .5s;
+  scroll-behavior: smooth;
+}
+
+*::first-letter {
+  text-transform: uppercase;
+}
+
+:root {
+  --Negro: #000;
+  --Blanco: #fff;
+  --Gris-01: #345b63;
+  --Gris-02: #1c3135;
+  --Azul-01: #00A19D;
+  --Azul-02: #01706e;
+  --Amarillo-01: #FFB344;
+  --Amarillo-02: #f19f24;
+  --verde-01: #00A14A;
+  --rojo-01: #C02116;
+  --rojo-02: #c01649;
+  --cafe-01: #3d280c;
+  --cafe-02: #140d04;
+  --Glass: rgba(255, 255, 255, 0.3);
+}
+
+.reverse {
+  -webkit-transform: scaleX(-1);
+          transform: scaleX(-1);
+}
+
+img {
+  max-width: 100vw;
+}
+
+.bookmark-black {
+  fill: #000;
+}
+
+button {
+  border: none;
+}
+
+.area {
+  overflow: auto;
+}
+
+/*============ ALL NAVS & BG header ============*/
+/*==== SPECIFIC ASPECTS ====*/
+.header-top {
+  padding-top: 2%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: 0 5%;
+}
+
+.icons {
+  width: 234px;
+  justify-self: right;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.icons a {
+  width: 100%;
+  margin-left: 3%;
+}
+
+.icons a img {
+  width: 100%;
+}
+
+.Logo a {
+  justify-self: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: var(--Blanco);
+  text-shadow: 0.5px 0.9px 0.2px rgba(0, 0, 0, 0.253);
+  text-decoration: none;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.Logo a h3 {
+  font-size: 50px;
+}
+
+.Logo a #logo-icon, .Logo a #logo-icon-yellowS {
+  margin: 0 3%;
+  width: clamp(10%, 72px, 30%);
+}
+
+.bars {
+  width: clamp(10%, 234px, 14%);
+  right: 0;
+}
+
+.bars a {
+  float: right;
+}
+
+#menu-icon {
+  width: 50px;
+  height: 50px;
+}
+
+/*======= HEADER BG =======*/
+.header-main {
+  background: url("../Imgs/nasa-gYwfpVI2JzM-unsplash.jpg");
+  height: 100%;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: 100%;
+  color: var(--Blanco);
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.253);
+}
+
+.header-hardware {
+  background: url("../Imgs/anas-alshanti-feXpdV001o4-unsplash.jpg");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: 100%;
+  color: var(--Blanco);
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.253);
+  height: 100vh;
+  -webkit-box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.658);
+          box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.658);
+  background-attachment: scroll;
+}
+
+.header-software {
+  background: url("../Imgs/windows-KXIWqtmvfxg-unsplash.jpg");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: 100%;
+  color: var(--Blanco);
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.253);
+  height: 100vh;
+  -webkit-box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.658);
+          box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.658);
+  background-attachment: scroll;
+}
+
+.header-conceptos {
+  background: url("../Imgs/gabriel-voltz-16fUCKyba8g-unsplash.jpg");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: 100%;
+  color: var(--Blanco);
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.253);
+  height: 100vh;
+  -webkit-box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.658);
+          box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.658);
+  background-position: 25% 30%;
+}
+
+.header-articulos {
+  background: url("../Imgs/vincentiu-solomon-ln5drpv_ImI-unsplash.jpg");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: 100%;
+  color: var(--Blanco);
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.253);
+  height: 100vh;
+  -webkit-box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.658);
+          box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.658);
+  background-position: 25% 70%;
+  background-attachment: scroll;
+}
+
+.header-blog-Páginas_Web {
+  background: url("../Imgs/stillness-inmotion-Gq3i2dnLGik-unsplash.jpg");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: 100%;
+  color: var(--Blanco);
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.253);
+  height: 100vh;
+  -webkit-box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.658);
+          box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.658);
+  background-position: 25% 20%;
+  background-attachment: scroll;
+}
+
+/*============== START ==============*/
+.header-center {
+  margin: 8% 0 2% 0;
+}
+
+.header-center h2 {
+  line-height: 100px;
+  text-align: center;
+  font-size: 90px;
+  font-weight: 700;
+  text-shadow: 4px 4px 4px rgba(0, 0, 0, 0.253);
+}
+
+.header-center h4 {
+  text-align: center;
+  font-size: 50px;
+  font-weight: 300;
+  text-shadow: 4px 4px 4px rgba(0, 0, 0, 0.253);
+}
+
+.header-center h3 {
+  letter-spacing: 4px;
+  font-weight: 200;
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.438);
+}
+
+.header-nav {
+  padding: 2% 5%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+.nav-categories {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.nav-title {
+  border-bottom: 2px solid #fff;
+}
+
+.nav-categories > button {
+  width: 160px;
+  height: 140px;
+  border-radius: 20%;
+  margin: 0 20px;
+  -ms-grid-column-align: end;
+      justify-self: end;
+  background-color: var(--Glass);
+  -webkit-box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.267);
+          box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.267);
+}
+
+.nav-categories .hardware:hover {
+  background-color: var(--rojo-01);
+}
+
+.nav-categories .software:hover {
+  background-color: var(--verde-01);
+}
+
+.nav-categories .conceptos:hover {
+  background-color: var(--Azul-02);
+}
+
+.nav-categories .articulos:hover {
+  background-color: var(--Gris-02);
+}
+
+.nav-categories > button > a {
+  text-decoration: none;
+}
+
+.nav-categories > button > a > img {
+  width: 72px;
+  height: 72px;
+}
+
+.nav-categories > button > a > h5 {
+  color: var(--Blanco);
+  font-size: 25px;
+  font-weight: 200;
+}
+
+.phrase {
+  width: 60%;
+  margin: auto;
+  margin-top: 2%;
+  text-align: center;
+}
+
+.phrase .text {
+  font-size: 24px;
+  font-weight: 200;
+  font-weight: 300;
+  text-shadow: 3px 3px 3px rgba(0, 0, 0, 0.438);
+}
+
+.phrase .harder {
+  margin-top: 3%;
+  font-size: 25px;
+  font-weight: 500;
+  text-align: end;
+  text-shadow: 3px 3px 3px rgba(0, 0, 0, 0.438);
+}
+
+.phrase .Stext, .phrase .Sharder {
+  text-align: start;
+}
+
+/* ====================  FULL OF MQ =================== */
+h1 {
+  font-weight: 600;
+}
+
+@media screen and (max-width: 50000px) {
+  h1 {
+    font-size: 100px;
+  }
+}
+
+@media screen and (max-width: 1080px) {
+  h1 {
+    font-size: 90px;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  h1 {
+    font-size: 50px;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  h1 {
+    font-size: 30px;
+  }
+}
+
+h2 {
+  font-weight: 400;
+}
+
+@media screen and (max-width: 50000px) {
+  h2 {
+    font-size: 75px;
+  }
+}
+
+@media screen and (max-width: 1080px) {
+  h2 {
+    font-size: 50px;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  h2 {
+    font-size: 30px;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  h2 {
+    font-size: 20px;
+  }
+}
+
+h3 {
+  font-weight: 400;
+}
+
+@media screen and (max-width: 50000px) {
+  h3 {
+    font-size: 65px;
+  }
+}
+
+@media screen and (max-width: 1080px) {
+  h3 {
+    font-size: 40px;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  h3 {
+    font-size: 25px;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  h3 {
+    font-size: 18px;
+  }
+}
+
+h4 {
+  font-size: 32px;
+}
+
+/* =====================  SPECIFIC MQ ======================*/
+@media screen and (max-width: 1080px) {
+  .header-center > h2 {
+    line-height: 75px;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .header-center > h2 {
+    line-height: 45px;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .header-center > h2 {
+    line-height: 30px;
+  }
+}
+
+/*=========== Footer ===========*/
+.footer-box {
+  background: #000;
+}
+
+.footer-box .main-footer {
+  margin-top: 5%;
+}
+
+.footer-box .footer {
+  width: 90%;
+  margin: auto;
+  display: -ms-grid;
+  display: grid;
+      grid-template-areas: "logo copy icons";
+  -ms-grid-columns: 1fr 1fr 1fr;
+      grid-template-columns: 1fr 1fr 1fr;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  justify-items: center;
+  padding: 15px 0;
+}
+
+.footer-box .footer .footer-logo {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+  grid-area: logo;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.footer-box .footer .footer-logo img {
+  width: 75px;
+}
+
+.footer-box .footer .footer-logo p {
+  margin-left: 3%;
+  color: var(--Blanco);
+  font-size: 30px;
+}
+
+.footer-box .footer .footer-copy {
+  color: var(--Blanco);
+  -ms-grid-row: 1;
+  -ms-grid-column: 2;
+  grid-area: copy;
+}
+
+.footer-box .footer .footer-copy p {
+  font-size: 18px;
+}
+
+.footer-box .footer .footer-icons {
+  -ms-grid-row: 1;
+  -ms-grid-column: 3;
+  grid-area: icons;
+  width: 190px;
+  justify-self: right;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.footer-box .footer .footer-icons a {
+  width: 100%;
+  margin-left: 4%;
+}
+
+.footer-box .footer .footer-icons a img {
+  width: 100%;
+}
+
+a {
+  text-decoration: none;
+}
+
+.articulo {
+  width: 85%;
+  margin: auto;
+  padding-top: 5%;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 25% 75%;
+      grid-template-columns: 25% 75%;
+      grid-template-areas: "index content";
+}
+
+.index {
+  width: 100%;
+  height: 100%;
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+  grid-area: index;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.index .index-content {
+  padding-top: 10%;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+}
+
+.index .index-content div ul {
+  list-style: none;
+}
+
+.index .index-butt {
+  -ms-flex-item-align: end;
+      align-self: flex-end;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 5%;
+  margin-bottom: 5%;
+}
+
+.index .index-butt a {
+  width: 50px;
+}
+
+.index .index-butt a img {
+  width: 100%;
+}
+
+.content {
+  margin-left: 3%;
+  -ms-grid-row: 1;
+  -ms-grid-column: 2;
+  grid-area: content;
+}
+
+.content .center-inf {
+  margin: auto;
+  width: 50%;
+}
+
+.content img {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: auto;
+  max-height: 450px;
+}
+
+article {
+  background: #fff;
+}
+
+article h4 {
+  font-size: 50px;
+  text-align: center;
+}
+
+article h5 {
+  font-size: 20px;
+}
+
+article p, article b, article i, article a {
+  font-size: 22px;
+}
+
+article h4 {
+  color: var(--Amarillo-02);
+}
+
+article h5 {
+  color: var(--Amarillo-02);
+}
+
+article p, article h2 {
+  color: #000;
+}
+
+article p b, article h2 b {
+  color: var(--Azul-02);
+}
+
+article a {
+  color: var(--rojo-01);
+  font-weight: 600;
+}
+
+article h2 {
+  font-weight: 600;
+}
+
+.masInfo {
+  font-size: 35px;
+  font-style: italic;
+}
+
+.blog-link {
+  width: 80%;
+  margin: auto;
+}
+
+.masInfo-space {
+  padding-bottom: 10%;
+}
+
+.masInfo-space ul {
+  margin-bottom: 5%;
+}
+
+/*==========  NIGHT MODIFICATION ==========*/
+.night {
+  background: #000;
+}
+
+.night h4 {
+  color: var(--Amarillo-01);
+}
+
+.night h5 {
+  color: var(--Amarillo-01);
+}
+
+.night p, .night h2 {
+  color: #fff;
+}
+
+.night p b, .night h2 b {
+  color: var(--Azul-02);
+}
+
+/**/
 /*====== FORMULARIO =====*/
 .contact-form {
   --form-ok-color: #4caf50;
@@ -770,5 +1537,176 @@ h4 {
     visibility: visible;
     opacity: 1;
   }
+}
+
+/*=============  ORGANIZACIÓN DEL CONTENIDO CONCEPTOS ============*/
+i {
+  color: var(--Gris-01);
+}
+
+.grid-area {
+  padding-top: 10%;
+  background: none;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 20% 80%;
+      grid-template-columns: 20% 80%;
+      grid-template-areas: "indice contenido";
+  gap: 2%;
+}
+
+.grid-area .index {
+  padding-top: 0;
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+  grid-area: indice;
+  width: auto;
+  margin: auto;
+}
+
+.grid-area .index-content {
+  padding-top: 10%;
+}
+
+.grid-area .Cocontent {
+  -ms-grid-row: 1;
+  -ms-grid-column: 2;
+  grid-area: contenido;
+}
+
+.grid-area .Cocontent div {
+  width: 95%;
+  margin-left: 5%;
+  margin-bottom: 3%;
+  border-bottom: 1px solid #888888;
+  padding-bottom: 2%;
+}
+
+.grid-area .Cocontent div i {
+  color: var(--Gris-01);
+  display: block;
+  text-align: right;
+}
+
+.grid-area .Cocontent div p {
+  font-weight: 200;
+}
+
+#but-clas, #but-clas-S {
+  width: 100%;
+  border: none;
+  padding: 15px;
+  margin-bottom: 2%;
+  background: var(--rojo-01);
+  margin: 5% 0;
+}
+
+#but-clas p, #but-clas-S p {
+  margin-left: 3%;
+  font-weight: 600;
+  font-size: 50px;
+}
+
+#but-clas {
+  margin-top: 0;
+}
+
+#but-clas-S {
+  background-color: var(--verde-01);
+}
+
+.CLobby h4 {
+  font-size: 40px;
+}
+
+.CLobby h5 {
+  font-size: 26px;
+}
+
+.CLobby p, .CLobby b, .CLobby i, .CLobby a {
+  font-size: 22px;
+}
+
+.CLobby h4 {
+  color: #c77343;
+}
+
+.CLobby h5 {
+  color: #c77343;
+}
+
+.CLobby p, .CLobby h2 {
+  width: 75%;
+  color: #fff;
+}
+
+.CLobby p b, .CLobby h2 b {
+  color: var(--Azul-02);
+}
+
+.CLobby a {
+  color: var(--rojo-01);
+  font-weight: 600;
+}
+
+.CLobby h2 {
+  font-weight: 600;
+}
+
+.CLobby h3 {
+  color: #fff;
+  font-weight: 600;
+  font-size: 65px;
+}
+
+.masInfo {
+  font-size: 35px;
+  font-style: italic;
+}
+
+.blog-link {
+  width: 80%;
+  margin: auto;
+}
+
+.masInfo-space {
+  padding-bottom: 10%;
+}
+
+.masInfo-space ul {
+  margin-bottom: 5%;
+}
+
+/*==========  NIGHT MODIFICATION ==========*/
+.night {
+  background: var(--cafe-02);
+}
+
+.night h4 {
+  color: var(--Amarillo-01);
+}
+
+.night h5 {
+  color: #9e9e9e;
+}
+
+.night p {
+  color: #9e9e9e;
+}
+
+.night p b {
+  color: var(--Azul-02);
+}
+
+.night .blank_p {
+  color: #fff;
+}
+
+.night h3 {
+  color: var(--Amarillo-01);
+}
+
+.night i {
+  color: var(--Azul-01);
 }
 /*# sourceMappingURL=lobby-styles.css.map */
