--- a/blogs/blogs-styles.scss
+++ b/blogs/blogs-styles.scss
@@ -111,7 +111,7 @@
         font-style: italic;
     }
     .blog-link{
-        width: 70%;
+        width: 80%;
         margin: auto;
     }
    
@@ -142,4 +142,4 @@
         } 
     }
 
-     
+/**/
